--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "generator-qb-webpack",
+  "name": "generator-qb",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
     "yeoman-generator"
   ],
